--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+PeePeePooPoo/Logs/AssetImportWorker0-prev.log
+PeePeePooPoo/Logs/AssetImportWorker0.log
+PeePeePooPoo/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+PeePeePooPoo/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+PeePeePooPoo/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+PeePeePooPoo/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+PeePeePooPoo/Logs/shadercompiler-UnityShaderCompiler.exe4.log
